[package]
name = "gear-depot"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/gear-depot"
description = "Sovereign registry proxy/cache and supply-chain policy POC backed by Starmetal."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }
